Changelog
=========

1.5.dev0 - (unreleased)
-----------------------
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

1.4 - (2017-04-24)
------------------
* Feature: add control panel option to show suggestions only after a certain
  title length
  [valipod refs #84480]
* Change: updated package information
  [eduard-fironda]

1.3 - (2017-04-19)
------------------
* Bug fix: fixed issue with the equivalent sets
  [valipod refs #84294]
* Feature: added metadata info to the suggestion dialog
  [valipod refs #84294]

1.2 - (2017-04-14)
------------------
* Bug fix: Remove hard dependency on plone.app.async and eea.versions
  [avoinea refs #83163]
* Bug fix: removed hard coded path in the dialog's javascript
  [valipod refs #83163]
* Bug fix: added some defaults to the control panel settings
  [valipod refs #83163]
* Bug fix: removed mandatory status for some control panel settings
  [valipod refs #83163]

1.1 - (2017-04-13)
------------------
* Bug fix: fixed README markup
  [alecghica refs #82296]
* Upgrade step: trigger index generation once (/www/create_idf_index)
  Feature: added index update frequency to the registry settings
  [valipod refs #83163]

1.0 - (2017-04-12)
------------------
* Feature: related to index and score:
    - moved the index creation to the async instance
    - add similarity score next to object link in dialog
    - [valipod refs #83163]
*  Feature: added to registry settings:
    - equivalent content types sets, use of stopwords, number of shown suggestions
    - max. score difference between suggestions, dialog title and text
    - [valipod refs #83163]
* Pre-upgrade step: run etc/scripts/prereq.sh on each backend
  [alecghica refs #82296]
* Pre-upgrade step: run deploy.sh
  [alecghica refs #82296]
* Upgrade step: from control panel instal eea.similarity
  [valipod refs #82296]
  [alecghica refs #82296]
* Feature: Initial release
  [valipod refs #82296]
