@@ -1,0 +1,18 @@
+<configure
+  xmlns="http://namespaces.zope.org/zope"
+  xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+  i18n_domain="eea">
+
+  <genericsetup:upgradeSteps
+            source="1.0"
+            destination="1.5"
+            profile="eea.similarity:default">
+
+    <genericsetup:upgradeDepends
+      title="Import steps with changes: rolemap"
+      import_steps="rolemap"
+      />
+
+  </genericsetup:upgradeSteps>
+
+</configure>
