@@ -3,6 +3,8 @@ Changelog
 
 1.5.dev0 - (unreleased)
 -----------------------
+* Change: Add dedicated async quota for similarity jobs
+  [avoinea refs #84915]
 * Change: fixed PyLint warnings and errors
   [valipod refs #84949]
 
